
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_3__ ;
typedef struct TYPE_5__ TYPE_2__ ;
typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_5__ {TYPE_3__* pfile_in_zip_read; } ;
typedef TYPE_2__ unz_s ;
typedef int * unzFile ;
struct TYPE_4__ {scalar_t__ total_out; } ;
struct TYPE_6__ {TYPE_1__ stream; } ;
typedef TYPE_3__ file_in_zip_read_info_s ;


 long UNZ_PARAMERROR ;

extern long unztell (unzFile file)
{
 unz_s* s;
 file_in_zip_read_info_s* pfile_in_zip_read_info;
 if (file==((void*)0))
  return UNZ_PARAMERROR;
 s=(unz_s*)file;
    pfile_in_zip_read_info=s->pfile_in_zip_read;

 if (pfile_in_zip_read_info==((void*)0))
  return UNZ_PARAMERROR;

 return (long)pfile_in_zip_read_info->stream.total_out;
}
